# qwaan-music-player

./: .gitignore  README.md  package-lock.json  package.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  music_library.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AlbumDetailsView.tsx  AlbumEditModal.tsx  AlbumGrid.tsx  ArtistDetailsView.tsx  ArtistGrid.tsx  GenreDetailsView.tsx  GenreGrid.tsx  HomePage.tsx  Icons.tsx  PlayerBar.tsx  PlayerVisualization.tsx  SettingsPage.tsx  Sidebar.tsx  SongTable.tsx  StickySectionNav.tsx  TopBar.tsx  WindowChrome.tsx
src/lib/: artworkAccent.ts  audioVisualization.ts  genres.ts  library.ts  personalization.ts
